--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,8 +1,3 @@
-# Taps
-tap "homebrew/cask"
-tap "homebrew/bundle"
-tap "homebrew/core"
-
 # Dotfile Management
 brew "chezmoi"
 
@@ -16,10 +11,10 @@ brew "rust"
 
 # Cloud Development Tools
 brew "awscli"
-brew "google-cloud-sdk"
+cask "google-cloud-sdk"
 
 # Development Applications
-cask "visual-studio-code"
+# cask "visual-studio-code"
 cask "docker"
 cask "iterm2"
 cask "postman"
@@ -45,7 +40,7 @@ brew "yq"
 brew "tree"
 brew "htop"
 brew "bat"
-brew "exa"
+brew "eza"
 brew "fd"
 brew "ripgrep"
 brew "tldr"
@@ -54,4 +49,4 @@ brew "mas"  # Mac App Store command line interface
 # Mac App Store Apps
 mas "Xcode", id: 497799835
 mas "Slack", id: 803453959
-mas "Microsoft Teams", id: 1113153706 
+# mas "Microsoft Teams", id: 1113153706 
