Establish single source of truth for Home Manager config - Move nix/home.nix to chezmoi/dot_config/private_home-manager/home.nix - Remove manual copy/link from bootstrap script - Use consistent chezmoi management for all configuration files - Implements principled approach: git control + chezmoi consistency + single source

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -7,6 +7,13 @@ cask "tableplus"                 # Database GUI
 cask "dbeaver-community"         # Database tool
 cask "webtorrent"                # BitTorrent client
 
+# AI/ML GUI Applications
+cask "chatgpt"                   # Desktop application for ChatGPT
+cask "cherry-studio"             # Desktop client for multiple LLM providers
+cask "lm-studio"                 # GUI for running local LLMs
+cask "jan"                       # Open-source ChatGPT alternative
+cask "gpt4all"                   # Run LLMs locally with GPU support
+
 # Cloud Development Tools (Mac-specific installers)
 brew "awscli"                    # AWS CLI (prefer Homebrew version on Mac)
 cask "google-cloud-sdk"          # Google Cloud SDK
