fix: separate unbootstrap and echo commands to ensure completion message
- Split compound command into two separate lines
- Echo now runs independently of unbootstrap exit code
- Ensures CI step completes even with exit code 138

--- a/.github/workflows/test-bootstrap.yml
+++ b/.github/workflows/test-bootstrap.yml
@@ -74,7 +74,8 @@ jobs:
           GITHUB_ACTIONS: true
         run: |
           echo "=== Running unbootstrap ==="
-          (./scripts/unbootstrap.sh || true) && echo "Unbootstrap completed"
+          ./scripts/unbootstrap.sh || true
+          echo "Unbootstrap step completed"
 
       - name: Run cleanup tests
         run: |
