--- a/.github/workflows/test-bootstrap.yml
+++ b/.github/workflows/test-bootstrap.yml
@@ -72,6 +72,7 @@ jobs:
         env:
           CI: true
           GITHUB_ACTIONS: true
+        shell: bash {0}  # Use bash without -e flag
         run: |
           echo "=== Running unbootstrap ==="
           ./scripts/unbootstrap.sh || true
