fix: capture unbootstrap exit code in subshell
Update workflow to run unbootstrap in a subshell that captures the
exit code. This should help diagnose the exit code 138 issue.

--- a/.github/workflows/test-bootstrap.yml
+++ b/.github/workflows/test-bootstrap.yml
@@ -75,7 +75,7 @@ jobs:
         shell: bash {0}  # Use bash without -e flag
         run: |
           echo "=== Running unbootstrap ==="
-          ./scripts/unbootstrap.sh || true
+          (./scripts/unbootstrap.sh || echo "Unbootstrap exited with code $?")
           echo "Unbootstrap step completed"
 
       - name: Run cleanup tests
