ci: update workflow to support Git Flow branches
- Run CI on PRs to both main and develop branches
- Run CI on pushes to develop branch
- Support the new Git Flow branching strategy

--- a/.github/workflows/test-bootstrap.yml
+++ b/.github/workflows/test-bootstrap.yml
@@ -2,6 +2,16 @@ name: Test Bootstrap Process
 
 on:
   pull_request:
+    branches: [ main, develop ]
+    paths:
+      - 'bootstrap.sh'
+      - 'scripts/unbootstrap.sh'
+      - 'nix/**'
+      - 'brew/**'
+      - 'chezmoi/**'
+      - '.github/workflows/test-bootstrap.yml'
+  push:
+    branches: [ develop ]
     paths:
       - 'bootstrap.sh'
       - 'scripts/unbootstrap.sh'
