feat: implement session tracking system
- Add .claude/ directory structure for session management
- Create session-start, session-end, session-status, and session-log scripts
- Add Makefile targets for session management
- Track session history in daily markdown files
- Store current session state in JSON format
- Ignore session history files in git

This provides better context tracking and development workflow management.

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,9 @@ public
 
 # Local Netlify folder
 .netlify .shell_backup
+
+# Claude session tracking
+.claude/history/
+.claude/session.json
+.claude/context/local/
+.claude/snippets/local/
