feat: add gum, borgbackup, and fswatch to development tools
Added three powerful CLI tools to enhance development workflow:

1. gum - Beautiful CLI prompts and interactions
   - Interactive menus and selections
   - Styled input and confirmations
   - Progress indicators

2. borgbackup - Deduplicating backup program
   - Space-efficient backups with deduplication
   - Encryption and compression support
   - Perfect for project backups

3. fswatch - File system event monitor
   - Watch files for changes
   - Trigger actions on modifications
   - Enable live-reload workflows

Also:
- Added all three tools to nix/home.nix for automatic installation
- Updated test suite to validate their availability
- Enhanced CI workflow to trigger on test changes
- Updated external/claude-init documentation
- Adjusted shellcheck config for test files

--- a/.github/workflows/test-bootstrap.yml
+++ b/.github/workflows/test-bootstrap.yml
@@ -9,6 +9,7 @@ on:
       - 'nix/**'
       - 'brew/**'
       - 'chezmoi/**'
+      - 'tests/**'
       - '.github/workflows/test-bootstrap.yml'
   push:
     branches: [ develop ]
@@ -18,6 +19,7 @@ on:
       - 'nix/**'
       - 'brew/**'
       - 'chezmoi/**'
+      - 'tests/**'
       - '.github/workflows/test-bootstrap.yml'
   workflow_dispatch:
     inputs:
