docs: change tone from academy to factual documentation
- Rename 'Dotfiles Academy' to 'Dotfiles' throughout
- Update package.json and astro.config.mjs
- Rewrite homepage with factual, study-notes style
- Update getting started guide to remove teaching language
- Rewrite modern replacements page with neutral tone
- Remove CLI Tools Academy section, merge into CLI Tools
- Update test suite to include all development pages

Changed tone from educational/teaching to factual documentation
that presents information as study notes without patronizing language.

--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dotfiles-academy",
+  "name": "dotfiles",
   "version": "0.1.0",
-  "description": "Comprehensive documentation and learning platform for modern development environments",
+  "description": "Development environment configuration documentation",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
