--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -39,17 +39,21 @@ jobs:
           rm -f package-lock.json
           npm install
 
-      - name: Validate link patterns
-        working-directory: .
-        run: |
-          chmod +x tests/docs/test_link_patterns.sh
-          timeout 30 tests/docs/test_link_patterns.sh || echo "⚠️ Link pattern validation timed out - proceeding with build"
+      - name: Build documentation
+        working-directory: docs
+        run: npm run build
 
-      - name: Test local build and links
+      - name: Test built site with dynamic discovery
         working-directory: .
         run: |
-          chmod +x tests/docs/test_links.sh
-          timeout 60 tests/docs/test_links.sh local || echo "⚠️ Link test timed out - proceeding with build"
+          chmod +x tests/docs/test_built_site.sh
+          tests/docs/test_built_site.sh
+
+      - name: Upload sitemap artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: sitemap
+          path: docs/sitemap.txt
 
   build:
     runs-on: ubuntu-latest
@@ -64,12 +68,14 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
+        working-directory: docs
         run: |
           # Remove package-lock.json to avoid cross-platform rollup issues
           rm -f package-lock.json
           npm install
 
       - name: Build with Astro
+        working-directory: docs
         run: npm run build
 
       - name: Setup Pages
@@ -94,18 +100,25 @@ jobs:
   verify:
     runs-on: ubuntu-latest
     needs: deploy
+    continue-on-error: true  # Don't fail the whole pipeline if verification fails
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Download sitemap artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: sitemap
+          path: docs/
+
       - name: Wait for deployment
         run: sleep 30
 
-      - name: Test production links
+      - name: Test production links with dynamic discovery
         working-directory: .
         run: |
-          chmod +x tests/docs/test_production_links.sh
-          tests/docs/test_production_links.sh
+          chmod +x tests/docs/test_production_dynamic.sh
+          tests/docs/test_production_dynamic.sh
 
       - name: Create deployment status comment
         if: always()
