fix: correct sed command in fix-shell-issues.sh (#65)
- Fixed broken sed pattern that was causing bracket multiplication
- Changed from 's/\[ ([^]]+) \]/[[[ \1 ]]]/g' to 's/\[ ([^]]+) \]/[[ \1 ]]/g'

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/admin"]
   path = external/admin
   url = https://github.com/garywu/admin.git
+[submodule "external/qbit"]
+	path = external/qbit
+	url = https://github.com/garywu/qbit.git
