feat: add update management and fix bash shebang compatibility
- Add comprehensive update checking across all package managers
- Add update-all script for one-command updates
- Add Ollama setup and integration
- Fix bash compatibility issues by enforcing #\!/usr/bin/env bash
- Add pre-commit hook to prevent hardcoded bash paths
- Update all 40+ scripts to use proper shebangs
- Add documentation about bash version requirements
- Enhance validate-all to include update checking

This prevents the recurring issue where scripts fail with 'declare -A'
errors on macOS due to using ancient system bash 3.2 instead of
modern bash 5.2 from Nix.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,3 +44,13 @@ repos:
     rev: 3.0.3
     hooks:
       - id: editorconfig-checker
+
+  # Check for hardcoded bash paths
+  - repo: local
+    hooks:
+      - id: check-bash-shebang
+        name: Check bash shebang
+        entry: ./scripts/check-bash-shebang.sh
+        language: system
+        pass_filenames: false
+        stages: [commit]
