feat(brew): add Tailscale for secure remote connectivity (#69)
- Add Tailscale to Brewfile for zero-config VPN
- Enables secure connectivity to WSL and other remote systems
- Already installed version 1.84.2 via Homebrew

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -24,6 +24,7 @@ cask "gpt4all"                   # Run LLMs locally with GPU support
 
 # Mac-specific tools
 brew "mas"                       # Mac App Store command line interface
+brew "tailscale"                 # Zero-config VPN for secure connectivity
 
 # Tools not easily available in Nix or work better via Homebrew on Mac
 brew "aria2"                     # Lightweight download utility
