fix: migrate pre-commit config to fix deprecated stage names
- Changed 'commit' stage to 'pre-commit' for check-bash-shebang hook
- Fixes warning: 'hook id check-bash-shebang uses deprecated stage names'
- Used 'pre-commit migrate-config' to apply the fix automatically

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,4 +53,4 @@ repos:
         entry: ./scripts/check-bash-shebang.sh
         language: system
         pass_filenames: false
-        stages: [commit]
+        stages: [pre-commit]
